<resources>
    <string name="app_name">ShoppingList</string>

    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="bought">Bought</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="todo">TODO</string>

    <string-array name="category_array">
        <item>Food</item>
        <item>Clothes</item>
        <item>Sport</item>
    </string-array>

</resources>