<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    app:cardBackgroundColor="#fff6a0"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            app:layout_constraintBottom_toTopOf="@+id/btnDelete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/ivItemLogo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_foreground"
            android:contentDescription="@string/todo" />

        <CheckBox
            android:id="@+id/cbBought"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bought"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.338"
            app:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="184dp"
            android:layout_height="35dp"
            android:layout_marginTop="8dp"
            android:text="@string/name"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/btnEdit"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toEndOf="@+id/ivItemLogo"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="184dp"
            android:layout_height="35dp"
            android:ems="10"
            android:hint="@string/price"
            android:textColor="@color/black"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#2E7D32"
            app:layout_constraintEnd_toStartOf="@+id/btnEdit"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintVertical_bias="0.0"
            card_view:layout_constraintBottom_toTopOf="@+id/cbBought"
            card_view:layout_constraintStart_toEndOf="@+id/ivItemLogo"
            card_view:layout_constraintTop_toBottomOf="@+id/tvName" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>